# mcm-test-harness

./: .gitignore  .pre-commit-config.yaml  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ab_harness/: __init__.py  __main__.py  batch.py  cli.py  clients.py  collector.py  compare.py  config.py  deploy.py  kpi.py  metadata.py  report.py  runner.py  sequential_testing.py  webrtc_client.py
libs/msprt/: pyproject.toml
libs/msprt/src/msprt/: __init__.py  core.py
libs/msprt/tests/: conftest.py  generate_golden_values.R  golden_values.json  test_core.py
tests/: conftest.py  test_compare.py  test_kpi.py  test_metadata.py  test_sequential_testing.py
