[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msprt"
version = "0.1.0"
description = "Mixture Sequential Probability Ratio Test (mSPRT) for always-valid A/B testing"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/msprt"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: Monte Carlo simulations and other long-running tests (run with: pytest -m slow)",
]
